# ikary-manifest

./: .dockerignore  .env.local.sample  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  local.db  mcp-server.db  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shadcn-components.json  tsconfig.base.json  turbo.json  vitest.workspace.ts
.changeset/: cell-branding.md  chart-primitives.md  cli-migrate-packages-extensible.md  config.json  dark-mode-primitive-studio.md  dark-mode-primitives-charts.md  fix-playground-favicon.md  ide-chrome-collapsible-panels.md  mcp-validation-prompt-caching-rate-limits.md  monaco-intellisense-json-schema.md  naming-conventions.md  node-24-centralization.md  playground-best-practices-refactor.md  publish-cli.md  rename-scope.md  rename-wrapper.md  slots-system.md  system-ikary-ui-init.md  try-ikary-co-cta.md  try-ikary-co-demo.md  unreleased-features.md
.claude/: doc-voice.md
.github/: copilot-instructions.md
cell-playground/: package.json  tsconfig.json  vite.config.ts
contracts/python/: .coverage  pyproject.toml
contracts/python/ikary_manifest/loader/: load.py
contracts/python/tests/: test_loader.py
coverage/: clover.xml  index.html
decisions/: 001-autonomous-dev-loop.md  002-release-pipeline.md
docs/: API-CONVENTIONS.md  ARCHITECTURE.md  ENTITY-CONTRACT.md  ENTITY-DEFINITION.md  ENTITY-GOVERNANCE.md  contributing.md  deployment.md  index.md  playground.md
evals/: README.md  package.json  vitest.config.ts
runtime-api/python/: README.md  pyproject.toml
(+3247 files in other folders)
