[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ikary-manifest"
version = "0.0.1"
description = "Ikary Manifest — Python SDK for declarative cell contracts"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
