[project]
name = "ikary-manifest-fastapi"
version = "0.0.1"
description = "FastAPI generator for Ikary cell manifests"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
